--- a/chart/base/values.yaml
+++ b/chart/base/values.yaml
@@ -25,9 +25,13 @@ route:
 ingress:
   enabled: true
   appid:
-    enabled: false
+    enabled: true
     # web or app - https://cloud.ibm.com/docs/services/appid?topic=appid-kube-auth
     requestType: web
+    
+    binding:
+      name: "binding-sandbox-ocp431-one-appid"
+      namespace: "dev5-yks"
 
 #  host: hello
   namespaceInHost: true
