--- a/chart/base/templates/ingress.yaml
+++ b/chart/base/templates/ingress.yaml
@@ -13,7 +13,7 @@ metadata:
     app: {{ .Release.Name }}
   {{- if .Values.ingress.appid.enabled }}
   annotations:
-    ingress.bluemix.net/appid-auth: {{ printf "bindSecret=%s namespace=%s requestType=%s serviceName=%s" (required "AppId binding is required to enable auth on the ingress" .Values.appidBinding) $namespace $requestType $fullName }}
+    haproxy.router.openshift.io/appid-auth: {{ printf "bindSecret=%s namespace=%s requestType=%s serviceName=%s" (required "AppId binding is required to enable auth on the ingress" .Values.appidBinding) $namespace $requestType $fullName }}
   {{- end}}
 spec:
 {{- if include "starter-kit.tlsSecretName" . }}
